# pdf-ninja

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pdf_ninja/: __init__.py  dataclasses.py  exc.py  ninja.py  types.py
pdf_ninja/builders/: parsed_pdf.py  pdf_context.py
pdf_ninja/config/: constants.py
pdf_ninja/extractors/: _base.py  figure.py  image.py  metadata.py  table.py  text.py
pdf_ninja/extractors/figure/: extractor.py
pdf_ninja/extractors/image/: extractor.py
pdf_ninja/extractors/table/: _camelot.py  _meta.py  _postprocessor.py  _tabula.py  extractor.py
pdf_ninja/extractors/text/: extractor.py
pdf_ninja/integrations/: llama_index.py
